# CappyCoding

./: .env.example  .gitignore  FRONTEND-CONFIG.md  IMPLEMENTATION-COMPLETE.md  QUICK-START.md  QUICKSTART.md  README-AGENT.md  README.md  USAGE-TRACKER-COMPLETE.md  agent.py  agent.py.old  demo-usage-tracker.sh  lefthook.yml  test-complete-tracker.sh  test-koyeb-push.sh
ble-types/: Cargo.toml
ble-types/src/: lib.rs
capicoding-app/: package.json
capicoding-app/src-tauri/: Cargo.toml  tauri.conf.json
capicoding-app/src-tauri/src/: main.rs
capycoding-app/: README.md  biome.jsonc  dprint.json  justfile  package.json  svelte.config.js  tsconfig.json  vite.config.js
capycoding-app/src/: app.css  types.ts
capycoding-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
capycoding-app/src-tauri/capabilities/: microphone-access.json
capycoding-app/src-tauri/src/: lib.rs  main.rs  types.rs
capycoding-app/src-tauri/src/ble/: mod.rs
capycoding-app/src-tauri/src/python/: collect_metrics.py
capycoding-app/src/lib/: shared.svelte.ts  tauri.ts
capycoding-app/src/lib/components/: LiveKitVoiceConsole.svelte  RemoteAudioTile.svelte
capycoding-app/src/lib/components/ui/accordion/: accordion-trigger.svelte
capycoding-app/src/lib/components/ui/alert/: alert.svelte
capycoding-app/src/lib/components/ui/alert-dialog/: alert-dialog-content.svelte  alert-dialog-footer.svelte  index.ts
capycoding-app/src/lib/components/ui/badge/: badge.svelte
capycoding-app/src/lib/components/ui/breadcrumb/: breadcrumb-link.svelte  breadcrumb-separator.svelte  breadcrumb.svelte
capycoding-app/src/lib/components/ui/button/: button.svelte
capycoding-app/src/lib/components/ui/button-group/: button-group-separator.svelte  button-group-text.svelte
capycoding-app/src/lib/components/ui/calendar/: calendar-caption.svelte  calendar-day.svelte  calendar-month-select.svelte  calendar-next-button.svelte  calendar-prev-button.svelte  calendar-year-select.svelte  calendar.svelte
capycoding-app/src/lib/components/ui/card/: card-action.svelte  card-footer.svelte  card-header.svelte
capycoding-app/src/lib/components/ui/carousel/: carousel-content.svelte  carousel-item.svelte  carousel-next.svelte  carousel-previous.svelte  carousel.svelte  context.ts
capycoding-app/src/lib/components/ui/chart/: chart-container.svelte  chart-style.svelte  chart-tooltip.svelte
capycoding-app/src/lib/components/ui/checkbox/: checkbox.svelte
capycoding-app/src/routes/: +layout.svelte  +page.svelte  +page.svelte.backup
capycoding-app/src/routes/config/: +page.svelte
capycoding-app/src/routes/setup/: +page.svelte
capycoding-esp/: Cargo.toml
capycoding-esp/src/: config.rs  lib.rs  state.rs  term.rs
capycoding-esp/src/ble/: mod.rs
capycoding-esp/src/ui/: mod.rs
capycoding-esp/src/widgets/: mod.rs
capycoding-esp/src/wifi/: api.rs  mod.rs
server/: README.md  go.mod  go.sum  main.go
server/internal/claude/: store.go  store_test.go
server/internal/githubclient/: client.go  client_test.go  token.go  token_test.go
server/internal/http/: handlers.go  handlers_test.go
(+120 files in other folders)
