[package]
edition      = "2024"
name         = "capycoding-esp"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "capycoding-esp"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
  "esp32c3",
  "log-04",
  "unstable",
] }

esp-rtos = { version = "0.1.1", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }
log                    = "0.4.27"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
  "esp32c3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.16.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32c3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"



display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.2.0"
 
profont = "0.7.0"
weact-studio-epd = { version = "0.1.2", features = ["blocking"] }
heapless = { version = "0.9.1", features = ["serde"] }

# mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "1028ac24f83920fd95a5585a85ef943901ee63ac", features = ["epd-weact" ]}
mousefood = { git = "https://github.com/suri-codes/mousefood.git", branch = "main", features = ["epd-weact", "portable-atomic", "framebuffer"]}
ratatui = { git  = "https://github.com/suri-codes/ratatui.git", branch = "main", default-features = false}
esp-storage = { version = "0.8.0", features = ["esp32c3"] }
serde = {version = "1.0.228", default-features = false}
postcard = "1.1.3"
embedded-storage = "0.3.1"
embassy-sync = "0.7.2"



embassy-futures = "0.1.2"

ble-types = {path = "../ble-types"}

[patch.crates-io]
ratatui = { git = "https://github.com/suri-codes/ratatui.git", branch = "main" }
ratatui-core = { git = "https://github.com/suri-codes/ratatui.git", branch = "main" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
# opt-level = "s"
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
